# SmartTool-Link

./: .gitignore  CMakeLists.txt  README.md  SmartTool-Link 核心模块调用逻辑.xmind  agents.md  coreDataFlow.md  readme.md  面试准备.md
app/: __init__.py  requirements.txt
app/analytics/: __init__.py  health_score.py
app/dashboard/: main.py
app/processor/: __init__.py  main.py  simulator.py
app/storage/: __init__.py  mysql_store.py  sqlite_store.py
config/app/: app.example.json
config/database/: database.example.json
config/mqtt/: mosquitto.conf  mqtt.example.json
docs/architecture/: core-module-call-logic-mindmap.md  executive-mindmap.md  interview-presentation-script-bilingual.md  logic-mindmap.opml  project-architecture-mindmap.md  project-code-files-mindmap.opml  project-reading-guide-bilingual.md  system-architecture-diagram.md  xmind-import-architecture.md
docs/setup/: new-machine-dependency-checklist.md
scripts/run/: run_dashboard.py  run_processor.py  start_broker.py
scripts/setup/: init_db.py  init_mysql.py  quickstart.ps1  quickstart.py  quickstart.sh
scripts/test/: run_cpp_gateway_e2e.py  run_mqtt_e2e.py
sql/procedures/: telemetry_mysql.sql
sql/schema/: init.sql  init_mysql.sql
src/: main.cpp
src/comm/mqtt/: mqtt_publisher.cpp  mqtt_publisher.h
src/comm/serializer/: telemetry_message.cpp  telemetry_message.h
src/config/: runtime_settings.cpp  runtime_settings.h
src/device/core/: base_sensor.cpp  base_sensor.h
src/device/sensors/: current_sensor.cpp  current_sensor.h  temperature_sensor.cpp  temperature_sensor.h  vibration_sensor.cpp  vibration_sensor.h
src/device/simulator/: device_simulator.cpp  device_simulator.h
